# backblaze-btwo

./: Cargo.toml  README-zh-CN.md  README.md
examples/: basic_upload.rs  cancel_large_file.rs  download_file.rs  hide_file.rs  large_file_upload.rs
src/: auth.rs  capabilities.rs  endpoint.rs  error.rs  keys.rs  lib.rs  util.rs
src/endpoint/: authorize_account.rs  cancel_large_file.rs  delete_file_version.rs  download_file_by_name.rs  finish_large_file.rs  get_file_info.rs  get_upload_part_url.rs  get_upload_url.rs  hide_file.rs  list_file_versions.rs  start_large_file.rs  upload_file.rs  upload_part.rs
