[package]
name = "btwo"
version = "0.1.0"
edition = "2021"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
description = "Library for using the Backblaze B2 API"
keywords = ["b2", "backblaze", "api", "http", "upload"]
categories = ["api-bindings", "asynchronous"]
repository = "https://github.com/Its-its/backblaze-btwo"
readme = "README.md"
license = "MIT"

[dependencies]
thiserror = "1.0"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bytes = "1.6"
sha1 = "0.10"
