[package]
name = "btwo"
version = "0.1.0"
edition = "2024"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
description = "Library for using the Backblaze B2 API"
keywords = ["b2", "backblaze", "api", "http", "upload"]
categories = ["api-bindings", "asynchronous"]
repository = "https://github.com/Its-its/backblaze-btwo"
readme = "README.md"
license = "MIT"

[dependencies]
thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
bytes = "1.11.0"
sha1 = "0.11.0-rc.3"
base16ct = { version = "1.0.0",features = ["alloc"] }

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["native-tls", "json"]

[dev-dependencies]
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}