[package]
name = "btwo"
version = "0.2.2"
edition = "2024"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
description = "Library for using the Backblaze B2 API"
keywords = ["b2", "backblaze", "api", "http", "upload"]
categories = ["api-bindings", "asynchronous"]
repository = "https://github.com/Its-its/backblaze-btwo"
readme = "README.md"
license = "MIT"

[dependencies]
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
bytes = "1.11"
sha1 = "0.11"
urlencoding = "2.1"
